<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>java-course</artifactId>
        <groupId>com.example</groupId>
        <version>1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>java-examples</artifactId>
    <properties>
        <!-- 指定项目开发时支持的版本 -->
        <maven.compiler.source>17</maven.compiler.source>
        <!-- 指定项目编译后支持的版本 -->
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

</project>